# rs-blog-frontend

.devcontainer/: docker-compose.yml
crates/axum-server/: Cargo.toml
crates/axum-server/src/: config.rs  main.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20230529021010_goal_folders.sql  20230529021020_goal_tables.sql
crates/db/queries/: goals.sql
crates/db/src/: lib.rs
crates/ui_components/: Cargo.toml
crates/ui_components/src/: goals.rs  lib.rs
