[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
db = { version = "0.1.0", path = "../db" }
dotenv = "0.15.0"
tokio = { version = "1.28.2", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
ui_components = { version = "0.1.0", path = "../ui_components" }
